--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <title>Site Clone</title>
   </head>
   <body>
-    <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-2">
+    <!-- Start of main Page Container -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-2">
         <button
           class="navbar-toggler"
           type="button"
@@ -111,7 +111,8 @@
             </button>
           </form>
         </div>
-      </nav>
+    </nav>
+      <div class="container-fluid"></div>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
