added description text

--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
         </form>
       </div>
     </nav>
-
+    <!-- todo: Update the css to that it expand to the max screen width
+         ?info: Container Class is required Class to use Bootstrap Grid Stystem
+    -->
     <div class="container pt-2 mt-2 bg-warning">
       <div class="row">
         <div class="col">
