--- a/index.html
+++ b/index.html
@@ -16,14 +16,22 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <!-- Font Awesome CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
+      integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" href="css/stylesheet.css" />
 
     <title>Site Clone</title>
   </head>
   <body>
     <!-- Start of main Page Container -->
     <header class="d-flex align-items-center p-2">
-      <img src="Images/logo.png" alt="logo" class="logo-img">
+      <img src="Images/logo.png" alt="logo" class="logo-img" />
       <h1 class="ml-4">Main Heading</h1>
     </header>
 
@@ -120,10 +128,10 @@
         </form>
       </div>
     </nav>
-    <!-- todo: Update the css to that it expand to the max screen width
+    <!-- todo: Update the css so that it expand to the max screen width
          ?info: Container Class is required Class to use Bootstrap Grid Stystem
     -->
-    <div class="container pt-2 mt-2 bg-warning">
+    <div class="container-fluid pt-2 mt-2 bg-warning">
       <div class="row">
         <div class="col">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem unde
