'fixed left column'

--- a/index.html
+++ b/index.html
@@ -1,169 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
-      crossorigin="anonymous"
-    />
+        <!-- Bootstrap CSS -->
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+            integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+            crossorigin="anonymous"
+        />
 
-    <!-- Font Awesome CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
-      integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni"
-      crossorigin="anonymous"
-    />
+        <!-- Font Awesome CSS -->
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
+            integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni"
+            crossorigin="anonymous"
+        />
 
-    <link rel="stylesheet" href="css/stylesheet.css" />
+        <link rel="stylesheet" href="css/stylesheet.css" />
 
-    <title>Site Clone</title>
-  </head>
-  <body>
-    <!-- Start of main Page Container -->
-    <header class="d-flex align-items-center p-2">
-      <img src="Images/logo.png" alt="logo" class="logo-img" />
-      <h1 class="ml-4">Main Heading</h1>
-    </header>
+        <title>Site Clone</title>
+    </head>
+    <body>
+        <!-- Start of main Page Container -->
+        <header class="d-flex align-items-center p-2">
+            <img src="Images/logo.png" alt="logo" class="logo-img" />
+            <h1 class="ml-4">Main Heading</h1>
+        </header>
 
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-2">
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
+        <!-- navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-2">
+            <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
             >
-          </li>
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              RTI
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Dropdown 1</a>
-              <a class="dropdown-item" href="#">Dropdown 2</a>
-              <a class="dropdown-item" href="#">Dropdown 3</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#"
+                            >Home <span class="sr-only">(current)</span></a
+                        >
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a
+                            class="nav-link dropdown-toggle"
+                            href="#"
+                            id="navbarDropdown"
+                            role="button"
+                            data-toggle="dropdown"
+                            aria-haspopup="true"
+                            aria-expanded="false"
+                        >
+                            RTI
+                        </a>
+                        <div
+                            class="dropdown-menu"
+                            aria-labelledby="navbarDropdown"
+                        >
+                            <a class="dropdown-item" href="#">Dropdown 1</a>
+                            <a class="dropdown-item" href="#">Dropdown 2</a>
+                            <a class="dropdown-item" href="#">Dropdown 3</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a
+                            class="nav-link dropdown-toggle"
+                            href="#"
+                            id="navbarDropdown"
+                            role="button"
+                            data-toggle="dropdown"
+                            aria-haspopup="true"
+                            aria-expanded="false"
+                        >
+                            PSGA
+                        </a>
+                        <div
+                            class="dropdown-menu"
+                            aria-labelledby="navbarDropdown"
+                        >
+                            <a class="dropdown-item" href="#">Dropdown 1</a>
+                            <a class="dropdown-item" href="#">Dropdown 2</a>
+                            <a class="dropdown-item" href="#">Dropdown 3</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a
+                            class="nav-link dropdown-toggle"
+                            href="#"
+                            id="navbarDropdown"
+                            role="button"
+                            data-toggle="dropdown"
+                            aria-haspopup="true"
+                            aria-expanded="false"
+                        >
+                            Schemes
+                        </a>
+                        <div
+                            class="dropdown-menu"
+                            aria-labelledby="navbarDropdown"
+                        >
+                            <a class="dropdown-item" href="#">Dropdown 1</a>
+                            <a class="dropdown-item" href="#">Dropdown 2</a>
+                            <a class="dropdown-item" href="#">Dropdown 3</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact Us</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input
+                        class="form-control mr-sm-2"
+                        type="search"
+                        placeholder="Search the Site"
+                        aria-label="Search"
+                    />
+                    <button
+                        class="btn btn-outline-success my-2 my-sm-0"
+                        type="submit"
+                    >
+                        Search
+                    </button>
+                </form>
             </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              PSGA
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Dropdown 1</a>
-              <a class="dropdown-item" href="#">Dropdown 2</a>
-              <a class="dropdown-item" href="#">Dropdown 3</a>
+        </nav>
+        <!-- main data  -->
+        <div class="container-fluid pt-2 mt-2 bg-warning">
+            <div class="row">
+                <!-- left column   -->
+                <div class="col  p-0 m-3 " >
+                    <div class="btn-lg btn-block btn-color rounded-0 rounded-lg border border-dark">Enter Data</div>
+                    <div class="p-3 border border-dark border-top-0" >
+                        <img src="Images/passport-img.jpg" alt="passport-img" class="passport-img rounded-lg mx-auto d-block">
+                        <div class="pt-3">Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Rem unde placeat minima id tempore dolorum, hic
+                        architecto minus optio saepe expedita magnam non
+                        officiis maxime, dolore accusamus, consequatur harum
+                        consequuntur?</div>
+                    </div>
+                </div>
+                <div class="col-6 text-center">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Maiores maxime consectetur vel accusantium, minus provident
+                    nam expedita, incidunt dicta ab ut? Expedita magnam
+                    asperiores quis delectus mollitia quasi saepe vitae.
+                </div>
+                <div class="col">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+                    atque dolores aut voluptate, tenetur harum nisi error hic
+                    repudiandae laudantium deleniti veniam quos consequuntur
+                    natus, placeat, perspiciatis aperiam. Minima, omnis.
+                </div>
             </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Schemes
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Dropdown 1</a>
-              <a class="dropdown-item" href="#">Dropdown 2</a>
-              <a class="dropdown-item" href="#">Dropdown 3</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input
-            class="form-control mr-sm-2"
-            type="search"
-            placeholder="Search the Site"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-            Search
-          </button>
-        </form>
-      </div>
-    </nav>
-    <!-- todo: Update the css so that it expand to the max screen width
-         ?info: Container Class is required Class to use Bootstrap Grid Stystem
-    -->
-    <div class="container-fluid pt-2 mt-2 bg-warning">
-      <div class="row">
-        <div class="col">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem unde
-          placeat minima id tempore dolorum, hic architecto minus optio saepe
-          expedita magnam non officiis maxime, dolore accusamus, consequatur
-          harum consequuntur?
         </div>
-        <div class="col-6 text-center">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
-          maxime consectetur vel accusantium, minus provident nam expedita,
-          incidunt dicta ab ut? Expedita magnam asperiores quis delectus
-          mollitia quasi saepe vitae.
-        </div>
-        <div class="col">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-          dolores aut voluptate, tenetur harum nisi error hic repudiandae
-          laudantium deleniti veniam quos consequuntur natus, placeat,
-          perspiciatis aperiam. Minima, omnis.
-        </div>
-      </div>
-    </div>
 
-    <!-- Optional JavaScript -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+        <!-- Optional JavaScript -->
+        <script
+            src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
