--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       </div>
     </nav>
     <!-- main data  -->
-    <div class="container-fluid pt-2 mt-2 bg-warning">
+    <section class="container-fluid pt-2 mt-2 bg-warning">
       <div class="row">
         <!-- left column   -->
         <div class="col p-0 m-3">
@@ -165,7 +165,7 @@
           perspiciatis aperiam. Minima, omnis.
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- Optional JavaScript -->
     <script
