--- a/index.html
+++ b/index.html
@@ -152,11 +152,207 @@
             </div>
           </div>
         </div>
-        <div class="col-6 text-center">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
-          maxime consectetur vel accusantium, minus provident nam expedita,
-          incidunt dicta ab ut? Expedita magnam asperiores quis delectus
-          mollitia quasi saepe vitae.
+        <div class="col-8">
+          <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <!-- * District Profile Tab Link -->
+            <li class="nav-item" role="presentation">
+              <a
+                class="nav-link active"
+                id="district_profile-tab"
+                data-toggle="tab"
+                href="#district_profile"
+                role="tab"
+                aria-controls="district_profile"
+                aria-selected="true"
+                >District Profile</a
+              >
+            </li>
+            <!-- * Notice Board Tab Link -->
+            <li class="nav-item" role="presentation">
+              <a
+                class="nav-link"
+                id="notice_board-tab"
+                data-toggle="tab"
+                href="#notice_board"
+                role="tab"
+                aria-controls="notice_board"
+                aria-selected="false"
+                >Notice Board</a
+              >
+            </li>
+            <!-- * Citizen Services Tab Link -->
+            <li class="nav-item" role="presentation">
+              <a
+                class="nav-link"
+                id="citizen_services-tab"
+                data-toggle="tab"
+                href="#citizen_services"
+                role="tab"
+                aria-controls="citizen_services"
+                aria-selected="false"
+                >Citizen Services</a
+              >
+            </li>
+            <!-- * District Officers Tab Link -->
+            <li class="nav-item" role="presentation">
+              <a
+                class="nav-link"
+                id="district_officers-tab"
+                data-toggle="tab"
+                href="#district_officers"
+                role="tab"
+                aria-controls="district_officers"
+                aria-selected="false"
+                >District Officers</a
+              >
+            </li>
+            <!-- * Quick Links Tab Link -->
+            <li class="nav-item" role="presentation">
+              <a
+                class="nav-link"
+                id="quick_links-tab"
+                data-toggle="tab"
+                href="#quick_links"
+                role="tab"
+                aria-controls="quick_links"
+                aria-selected="false"
+                >Quick Links</a
+              >
+            </li>
+          </ul>
+          <div class="tab-content" id="myTabContent">
+            <!-- * Data for District Profile -->
+            <div
+              class="tab-pane fade show active"
+              id="district_profile"
+              role="tabpanel"
+              aria-labelledby="district_profile-tab"
+            >
+              <h2 class="mt-2">Heading</h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Incidunt omnis tempore vitae accusamus nesciunt labore mollitia
+                repudiandae praesentium ducimus. Obcaecati rerum corporis
+                dolores accusantium.
+              </p>
+              <div
+                id="carouselExampleControls"
+                class="carousel slide"
+                data-ride="carousel"
+              >
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      src="Images/Dog-1.jpg"
+                      class="d-block w-100 img-fluid"
+                      style="height: 400px; object-fit: cover"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="Images/Dog-2.jpg"
+                      class="d-block w-100 img-fluid"
+                      style="height: 400px; object-fit: cover"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="Images/Dog-3.jpg"
+                      class="d-block w-100 img-fluid"
+                      style="height: 400px; object-fit: cover"
+                      alt="..."
+                    />
+                  </div>
+                </div>
+                <a
+                  class="carousel-control-prev"
+                  href="#carouselExampleControls"
+                  role="button"
+                  data-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a
+                  class="carousel-control-next"
+                  href="#carouselExampleControls"
+                  role="button"
+                  data-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            </div>
+            <!-- * Data for Notice Board -->
+            <div
+              class="tab-pane fade"
+              id="notice_board"
+              role="tabpanel"
+              aria-labelledby="notice_board-tab"
+            >
+              <h2 class="mt-2">Notice Board</h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Cupiditate nulla eos labore? Qui saepe possimus laudantium sed
+                corporis nesciunt aliquid! Iusto, deserunt quam nemo quo beatae
+                eaque soluta facere praesentium.
+              </p>
+            </div>
+            <!-- * Data for Citizen Services -->
+            <div
+              class="tab-pane fade"
+              id="citizen_services"
+              role="tabpanel"
+              aria-labelledby="citizen_servicest-tab"
+            >
+              <h2 class="mt-2">Citizen Services</h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Architecto fugiat cupiditate nobis laborum perferendis. Iusto
+                iste ipsum, a itaque, cupiditate voluptatum molestiae inventore
+                voluptates saepe necessitatibus quae totam, libero illum.
+              </p>
+            </div>
+            <!-- * Data for District Officers -->
+            <div
+              class="tab-pane fade"
+              id="district_officers"
+              role="tabpanel"
+              aria-labelledby="district_officers-tab"
+            >
+              <h2 class="mt-2">District Officers</h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Architecto fugiat cupiditate nobis laborum perferendis. Iusto
+                iste ipsum, a itaque, cupiditate voluptatum molestiae inventore
+                voluptates saepe necessitatibus quae totam, libero illum.
+              </p>
+            </div>
+            <!-- * Data for Quick LInks -->
+            <div
+              class="tab-pane fade"
+              id="quick_links"
+              role="tabpanel"
+              aria-labelledby="quick_links-tab"
+            >
+              <h2 class="mt-2">Quick Links</h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Architecto fugiat cupiditate nobis laborum perferendis. Iusto
+                iste ipsum, a itaque, cupiditate voluptatum molestiae inventore
+                voluptates saepe necessitatibus quae totam, libero illum.
+              </p>
+            </div>
+          </div>
         </div>
         <div class="col">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
