--- a/index.html
+++ b/index.html
@@ -363,6 +363,14 @@
       </div>
     </section>
 
+    <!-- footer section -->
+    <footer class="d-flex align-items-center p-2 justify-content-around pt-4">
+        <img src="Images/india.png" alt="india.gov.in">
+        <img src="Images/digilocker.png" alt="digilocker">
+        <img src="Images/india.png" alt="india.gov.in">
+        <img src="Images/digilocker.png" alt="digilocker">
+    </footer>
+
     <!-- Optional JavaScript -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
