update footer content

--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
       crossorigin="anonymous"
     />
 
-    <!-- Font Awesome CSS -->
+    <!-- Font Awesome -->
     <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
-      integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni"
-      crossorigin="anonymous"
     />
 
     <link rel="stylesheet" href="css/stylesheet.css" />
@@ -129,7 +127,7 @@
       </div>
     </nav>
     <!-- main data  -->
-    <section class="container-fluid pt-2 mt-2 bg-warning">
+    <section class="container-fluid pt-2 mt-2 bg-light">
       <div class="row">
         <!-- left column   -->
         <div class="col p-0 m-3">
@@ -362,13 +360,28 @@
         </div>
       </div>
     </section>
-
     <!-- footer section -->
-    <footer class="d-flex align-items-center p-2 justify-content-around pt-4">
-        <img src="Images/india.png" alt="india.gov.in">
-        <img src="Images/digilocker.png" alt="digilocker">
-        <img src="Images/india.png" alt="india.gov.in">
-        <img src="Images/digilocker.png" alt="digilocker">
+    <footer class="mt-2">
+      <div class="d-flex align-items-center p-2 justify-content-around pt-4">
+        <img src="Images/india.png" alt="india.gov.in" />
+        <img src="Images/digilocker.png" alt="digilocker" />
+        <img src="Images/india.png" alt="india.gov.in" />
+        <img src="Images/digilocker.png" alt="digilocker" />
+      </div>
+      <div class="bg-light text-center pt-2">
+        <!-- Code Repository -->
+        <div class="text-center">
+          <a
+            class="btn btn-dark"
+            href="https://github.com/wrench1815/site-clone"
+            target="_blank"
+            ><i class="fab fa-github"></i> GitHub</a
+          >
+        </div>
+        <!-- Copyright -->
+        <div class="text-center p-3">© 2021 Copyright: Hardeep and Anmol</div>
+        <!-- Copyright -->
+      </div>
     </footer>
 
     <!-- Optional JavaScript -->
