--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
             </div>
           </div>
         </div>
+        <!-- middle column -->
         <div class="col-8">
           <ul class="nav nav-tabs" id="myTab" role="tablist">
             <!-- * District Profile Tab Link -->
@@ -352,6 +353,7 @@
             </div>
           </div>
         </div>
+        <!-- right column -->
         <div class="col">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
           dolores aut voluptate, tenetur harum nisi error hic repudiandae
