update left column

--- a/index.html
+++ b/index.html
@@ -131,24 +131,27 @@
       <div class="row">
         <!-- left column   -->
         <div class="col p-0 m-3">
-          <div
-            class="btn-lg btn-block btn-color rounded-0 rounded-lg border border-dark"
-          >
-            Enter Data
-          </div>
-          <div class="p-3 border border-dark border-top-0">
-            <img
-              src="Images/passport-img.jpg"
-              alt="passport-img"
-              class="passport-img rounded-lg mx-auto d-block"
-            />
-            <div class="pt-3">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem unde
-              placeat minima id tempore dolorum, hic architecto minus optio
-              saepe expedita magnam non officiis maxime, dolore accusamus,
-              consequatur harum consequuntur?
+          <!-- * Left column section
+               * Shows Image and some text below it
+          -->
+          <section class="border border-dark">
+            <div class="btn btn-dark btn-block rounded-0">
+              <i class="fas fa-user"></i> <span>Desk</span>
             </div>
-          </div>
+            <div class="mt-2 px-3">
+              <img
+                src="Images/passport-img.jpg"
+                alt=""
+                class="img-fluid img-thumbnail"
+              />
+              <p class="pt-2">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem
+                unde placeat minima id tempore dolorum, hic architecto minus
+                optio saepe expedita magnam non officiis maxime, dolore
+                accusamus, consequatur harum consequuntur?
+              </p>
+            </div>
+          </section>
         </div>
         <!-- middle column -->
         <div class="col-8">
