added more text in left column

--- a/index.html
+++ b/index.html
@@ -148,7 +148,11 @@
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem
                 unde placeat minima id tempore dolorum, hic architecto minus
                 optio saepe expedita magnam non officiis maxime, dolore
-                accusamus, consequatur harum consequuntur?
+                accusamus, consequatur harum consequuntur? Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Fugit pariatur molestiae
+                necessitatibus quod laboriosam illo tenetur amet earum
+                voluptatem? Praesentium temporibus vel nisi ipsam placeat nobis
+                soluta explicabo deleniti qui.
               </p>
             </div>
           </section>
