update minaor issues

--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                 unde placeat minima id tempore dolorum, hic architecto minus
                 optio saepe expedita magnam non officiis maxime, dolore
                 accusamus, consequatur harum consequuntur? Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Fugit pariatur molestiae
-                necessitatibus quod laboriosam illo tenetur amet earum
-                voluptatem? Praesentium temporibus vel nisi ipsam placeat nobis
-                soluta explicabo deleniti qui.
+                amet consectetur adipisicing elit. Laudantium deleniti modi
+                iste, praesentium corporis placeat expedita a doloremque, sunt
+                veritatis quis, temporibus suscipit iusto culpa autem maiores
+                excepturi accusantium dolorem.
               </p>
             </div>
           </section>
