--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 amet consectetur adipisicing elit. Laudantium deleniti modi
                 iste, praesentium corporis placeat expedita a doloremque, sunt
                 veritatis quis, temporibus suscipit iusto culpa autem maiores
-                excepturi accusantium dolorem.
-                accusamus, consequatur harum consequuntur?
+                excepturi accusantium dolorem. accusamus, consequatur harum
+                consequuntur?
               </p>
             </div>
           </section>
@@ -242,6 +242,7 @@
                 repudiandae praesentium ducimus. Obcaecati rerum corporis
                 dolores accusantium.
               </p>
+              <!-- carousel -->
               <div
                 id="carouselExampleControls"
                 class="carousel slide"
@@ -297,6 +298,139 @@
                   ></span>
                   <span class="sr-only">Next</span>
                 </a>
+              </div>
+              <!-- accordion -->
+              <div class="accordion mt-4 mb-2" id="accordionExample">
+                <!-- Administration section -->
+                <div class="card">
+                  <div class="card-header" id="headingOne">
+                    <h2 class="mb-0">
+                      <button
+                        class="btn btn-link btn-block text-left"
+                        type="button"
+                        data-toggle="collapse"
+                        data-target="#collapseOne"
+                        aria-expanded="true"
+                        aria-controls="collapseOne"
+                      >
+                        1. Administration
+                      </button>
+                    </h2>
+                  </div>
+
+                  <div
+                    id="collapseOne"
+                    class="collapse show"
+                    aria-labelledby="headingOne"
+                    data-parent="#accordionExample"
+                  >
+                    <div class="card-body">
+                      <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Adipisci, illo earum eius sit non voluptas error
+                        quae eos, totam suscipit fuga amet doloribus, dolor
+                        accusamus ea placeat. Blanditiis, autem odit?
+                      </p>
+                      <h5>Ipsum dolor sit amet</h5>
+                    </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-header" id="headingTwo">
+                    <h2 class="mb-0">
+                      <button
+                        class="btn btn-link btn-block text-left collapsed"
+                        type="button"
+                        data-toggle="collapse"
+                        data-target="#collapseTwo"
+                        aria-expanded="false"
+                        aria-controls="collapseTwo"
+                      >
+                        2. Location of District Ramban
+                      </button>
+                    </h2>
+                  </div>
+                  <div
+                    id="collapseTwo"
+                    class="collapse"
+                    aria-labelledby="headingTwo"
+                    data-parent="#accordionExample"
+                  >
+                    <div class="card-body">
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Voluptas ipsum error odio rem blanditiis accusantium ea
+                        voluptate dolorem eveniet quo recusandae voluptatum
+                        dignissimos, laboriosam dolorum! Est quo tempore
+                        doloremque expedita?
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-header" id="headingThree">
+                    <h2 class="mb-0">
+                      <button
+                        class="btn btn-link btn-block text-left collapsed"
+                        type="button"
+                        data-toggle="collapse"
+                        data-target="#collapseThree"
+                        aria-expanded="false"
+                        aria-controls="collapseThree"
+                      >
+                        3. Hydro Electric Project
+                      </button>
+                    </h2>
+                  </div>
+                  <div
+                    id="collapseThree"
+                    class="collapse"
+                    aria-labelledby="headingThree"
+                    data-parent="#accordionExample"
+                  >
+                    <div class="card-body">
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Suscipit rerum soluta explicabo similique omnis
+                        vitae nesciunt corporis autem reiciendis molestias. Ab
+                        rerum quidem explicabo dolor beatae qui est repellendus
+                        architecto.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-header" id="headingFour">
+                    <h2 class="mb-0">
+                      <button
+                        class="btn btn-link btn-block text-left collapsed"
+                        type="button"
+                        data-toggle="collapse"
+                        data-target="#collapseFour"
+                        aria-expanded="false"
+                        aria-controls="collapseFour"
+                      >
+                        4. Chenani-Nashri Tunnel on NH-1A
+                      </button>
+                    </h2>
+                  </div>
+                  <div
+                    id="collapseFour"
+                    class="collapse"
+                    aria-labelledby="headingFour"
+                    data-parent="#accordionExample"
+                  >
+                    <div class="card-body">
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Suscipit rerum soluta explicabo similique omnis
+                        vitae nesciunt corporis autem reiciendis molestias. Ab
+                        rerum quidem explicabo dolor beatae qui est repellendus
+                        architecto.
+                      </p>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <!-- * Data for Notice Board -->
