update image size edir passport-img class

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <img
                 src="Images/passport-img.jpg"
                 alt=""
-                class="img-fluid img-thumbnail"
+                class="img-fluid img-thumbnail passport-img"
               />
               <p class="pt-2">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem
