update css classes rename few dic tags to section

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </section>
         </div>
         <!-- middle column -->
-        <div class="col-8">
+        <section class="col-8">
           <ul class="nav nav-tabs" id="myTab" role="tablist">
             <!-- * District Profile Tab Link -->
             <li class="nav-item" role="presentation">
@@ -305,8 +305,8 @@
                 <div class="card">
                   <div class="card-header" id="headingOne">
                     <h2 class="mb-0">
-                      <button
-                        class="btn btn-link btn-block text-left"
+                      <div
+                        class="btn btn-block text-left text-primary"
                         type="button"
                         data-toggle="collapse"
                         data-target="#collapseOne"
@@ -314,7 +314,7 @@
                         aria-controls="collapseOne"
                       >
                         1. Administration
-                      </button>
+                      </div>
                     </h2>
                   </div>
 
@@ -338,8 +338,8 @@
                 <div class="card">
                   <div class="card-header" id="headingTwo">
                     <h2 class="mb-0">
-                      <button
-                        class="btn btn-link btn-block text-left collapsed"
+                      <div
+                        class="btn btn-block text-left text-primary collapsed"
                         type="button"
                         data-toggle="collapse"
                         data-target="#collapseTwo"
@@ -347,7 +347,7 @@
                         aria-controls="collapseTwo"
                       >
                         2. Location of District Ramban
-                      </button>
+                      </div>
                     </h2>
                   </div>
                   <div
@@ -370,8 +370,8 @@
                 <div class="card">
                   <div class="card-header" id="headingThree">
                     <h2 class="mb-0">
-                      <button
-                        class="btn btn-link btn-block text-left collapsed"
+                      <div
+                        class="btn btn-block text-left text-primary collapsed"
                         type="button"
                         data-toggle="collapse"
                         data-target="#collapseThree"
@@ -379,7 +379,7 @@
                         aria-controls="collapseThree"
                       >
                         3. Hydro Electric Project
-                      </button>
+                      </div>
                     </h2>
                   </div>
                   <div
@@ -402,8 +402,8 @@
                 <div class="card">
                   <div class="card-header" id="headingFour">
                     <h2 class="mb-0">
-                      <button
-                        class="btn btn-link btn-block text-left collapsed"
+                      <div
+                        class="btn btn-block text-left text-primary collapsed"
                         type="button"
                         data-toggle="collapse"
                         data-target="#collapseFour"
@@ -411,7 +411,7 @@
                         aria-controls="collapseFour"
                       >
                         4. Chenani-Nashri Tunnel on NH-1A
-                      </button>
+                      </div>
                     </h2>
                   </div>
                   <div
@@ -494,14 +494,14 @@
               </p>
             </div>
           </div>
-        </div>
+        </section>
         <!-- right column -->
-        <div class="col">
+        <section class="col">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
           dolores aut voluptate, tenetur harum nisi error hic repudiandae
           laudantium deleniti veniam quos consequuntur natus, placeat,
           perspiciatis aperiam. Minima, omnis.
-        </div>
+        </section>
       </div>
     </section>
     <!-- footer section -->
