--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img
-                      src="Images/Dog-1.jpg"
+                      src="Images/first.jpg"
                       class="d-block w-100 img-fluid"
                       style="height: 400px; object-fit: cover"
                       alt="..."
@@ -259,7 +259,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="Images/Dog-2.jpg"
+                      src="Images/second.jpg"
                       class="d-block w-100 img-fluid"
                       style="height: 400px; object-fit: cover"
                       alt="..."
@@ -267,7 +267,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="Images/Dog-3.jpg"
+                      src="Images/third.jpg"
                       class="d-block w-100 img-fluid"
                       style="height: 400px; object-fit: cover"
                       alt="..."
