left column dark border changed

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
           <!-- * Left column section
                * Shows Image and some text below it
           -->
-          <section class="border border-dark">
+          <!-- dark border changed -->
+          <section class="card">
             <div class="btn btn-dark btn-block rounded-0">
               <i class="fas fa-user"></i> <span>Desk</span>
             </div>
