add buttons to right column fix column width of middle and right

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           </section>
         </div>
         <!-- middle column -->
-        <section class="col-8">
+        <section class="col-7">
           <ul class="nav nav-tabs" id="myTab" role="tablist">
             <!-- * District Profile Tab Link -->
             <li class="nav-item" role="presentation">
@@ -550,11 +550,49 @@
           </div>
         </section>
         <!-- right column -->
-        <section class="col">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque
-          dolores aut voluptate, tenetur harum nisi error hic repudiandae
-          laudantium deleniti veniam quos consequuntur natus, placeat,
-          perspiciatis aperiam. Minima, omnis.
+        <section class="col-3">
+          <button class="btn btn-sm btn-block btn-danger py-2" type="submit">
+            CM Grievance-Lodge Complaint <em class="fas fa-angle-right"></em>
+          </button>
+
+          <div class="border border-dark mt-4">
+            <div class="btn btn-sm btn-dark btn-block rounded-0 py-2">
+              <em class="fas fa-info-circle"></em>
+              <span>Flood 2014/releif Distribution</span>
+            </div>
+
+            <a href="https://site.com" target="_blank" class="nav-link py-2">
+              Flash Floods 2014 Cases
+              <span class="badge badge-danger">new</span></a
+            >
+          </div>
+
+          <div class="border border-dark mt-4">
+            <div class="btn btn-sm btn-dark btn-block rounded-0 py-2">
+              <em class="fas fa-user"></em>
+              <em class="fas fa-user"></em>
+              <span>Consumer Grievance Redressal</span>
+              <span class="badge badge-danger">new</span>
+            </div>
+
+            <a href="https://site.com" target="_blank" class="nav-link pt-3"
+              ><em class="fas fa-arrow-right text-dark"></em> Know your Consumer
+              Rights</a
+            >
+            <a href="https://site.com" target="_blank" class="nav-link pt-0"
+              ><em class="fas fa-arrow-right text-dark"></em> Know your Consumer
+              Rights</a
+            >
+            <div class="btn btn-sm btn-block btn-success text-left">
+              <img
+                src="Images/jago-grahak-jago.png"
+                alt=""
+                class="img-fluid"
+                style="width: 50px"
+              />
+              Have Grievence? Lodge Complaint
+            </div>
+          </div>
         </section>
       </div>
     </section>
